--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "antd": "^5.8.6",
+    "antd-img-crop": "^4.12.2",
     "autoprefixer": "10.4.15",
     "dayjs": "^1.11.9",
     "eslint": "8.48.0",
