--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "clsx": "^2.0.0",
+    "tailwind-merge": "^2.1.0"
   }
 }
